# message_integrity

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: message.integrity.pipeline.yml  message.pipeline.yml  message_integrity.pipeline.yml
message_integrity/: manage.py
message_integrity/application/factories/: imap.py  interface.py
message_integrity/application/services/: base.py  gmail.py  interface.py  mail.py  yandex.py
message_integrity/application/use_cases/: interface.py  mails.py  users.py
message_integrity/application/use_cases/mails/: interface.py  mails.py
message_integrity/application/use_cases/users/: interface.py  users.py
message_integrity/domain/enums/: emails.py
message_integrity/infrastructure/repositories/: interface.py  users.py
message_integrity/mails/: models.py  views.py
message_integrity/mails/migrations/: 0001_initial.py  0002_mailfiles.py  0003_alter_mail_received_date_alter_mail_sent_date.py  0004_alter_mail_subject.py
message_integrity/message_integrity/: asgi.py  settings.py  urls.py  wsgi.py
message_integrity/presentation/: routers.py
message_integrity/presentation/api/: routers.py
message_integrity/presentation/api/v1/: mails.py  (+1 more)
message_integrity/presentation/websocket/: routers.py
message_integrity/static/css/: mails.css
message_integrity/static/js/: mails.js
message_integrity/templates/: hello.html  mails.html
message_integrity/users/: models.py  serializers.py  views.py
message_integrity/users/migrations/: 0001_initial.py
(+4 files in other folders)
